--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   </head>
   <body>
     <h1>"It's not having what you want, it's wanting what you have."</h1>
+    <h2>Famous Education Quotes</h2>
+    <h2>Famous Sports Quotes</h2>
   </body>
 </html>
