--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
     <h1>"It's not having what you want, it's wanting what you have."</h1>
     <h2>Famous Education Quotes</h2>
     <h2>Famous Sports Quotes</h2>
+    <ul>
+      <li>item 1</li>
+      <li>item 2</li>
+    </ul>
   </body>
 </html>
