--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   </head>
   <body>
     <h1>"It's not having what you want, it's wanting what you have."</h1>
-    <h2>Famous Education Quotes</h2>
-    <h2>Famous Sports Quotes</h2>
+<ul>
+    <li><h2>Famous Education Quotes</h2></li>
+    <li?<h2>Famous Sports Quotes</h2></li>
+</ul>
     <ul>
       <li>item 1</li>
       <li>item 2</li>
