--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>"It's not having what you want, it's wanting what you have."</h1>
 <ul>
     <li><h2>Famous Education Quotes</h2></li>
-    <li?<h2>Famous Sports Quotes</h2></li>
+    <li><h2>Famous Sports Quotes</h2></li>
 </ul>
     <ul>
       <li>item 1</li>
