--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Famous Quotes</title>
+    <link rel="stylesheet" href="css\styles.css">
   </head>
   <body>
-    <h1>"It's not having what you want, it's wanting what you have."</h1>
-<ul>
-    <li><h2>Famous Education Quotes</h2></li>
-    <li><h2>Famous Sports Quotes</h2></li>
-</ul>
+    <h1 class="title">"It's not having what you want, it's wanting what you have."</h1>
+<div class="panel">
+  <ul>
+    <li><h2 id="quote6" class="quotes"> Famous Education Quotes</h2></li>
+    <li><h2 id="quote6" class="quotes"> Famous Sports Quotes</h2></li>
+    <li><h2 id="quote6" class="quotes"> Famous Literature Quotes</h2></li>
+    <li><h2 id="quote6" class="quotes"> Famous Art Quotes</h2></li>
+    <li><h2 id="quote6" class="quotes"> Famous Leader Quotes</h2></li>
+  </ul>
+</div>
     <ul>
       <li>item 1</li>
       <li>item 2</li>
